--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>kortean Language Typing Trainer</title>
+  <title>korean Language Typing Trainer</title>
   <style>
     
     body {
@@ -188,7 +188,7 @@
   </style>
 </head>
 <body>
-  <h1>Foreign Reading Practice</h1>
+  <h1>Korean Reading Practice</h1>
 
   <div class="stream-wrapper" id="stream-wrapper"></div>
 
