--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Foreign Language Typing Trainer</title>
+  <title>Korean Language Typing Trainer</title>
   <style>
     body {
       font-family: "Segoe UI", sans-serif;
@@ -161,7 +161,9 @@
   </style>
 </head>
 <body>
-  <h1>Foreign Reading Practice</h1>
+  <h1>Korean Reading Practice</h1>
+  <h2>Does not work on mobile sorry:(</h2>
+  <h2>made by YH:)</h2>
 
   <div class="stream-wrapper" id="stream-wrapper"></div>
 
