--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Korean Language Typing Trainer</title>
+  <title>Foreign Language Typing Trainer</title>
   <style>
     body {
       font-family: "Segoe UI", sans-serif;
@@ -26,22 +26,9 @@
       padding-bottom: 1rem;
       margin-bottom: 1rem;
       border-bottom: 2px solid #ddd;
-
-      /* Add smooth scrolling */
-      scroll-behavior: smooth;
-
-      /* Prevent vertical scroll */
       white-space: nowrap;
-    }
-
-    /* Container for foreign words & translations */
-    .stream-wrapper {
-      display: flex;
-      gap: 2rem;
-      overflow-x: auto;
-      padding-bottom: 1rem;
-      margin-bottom: 1rem;
-      border-bottom: 2px solid #ddd;
+      scroll-behavior: smooth;
+      scroll-snap-type: x mandatory;
     }
 
     .word-pair {
@@ -52,6 +39,7 @@
       opacity: 0;
       transform: translateX(30px);
       transition: all 0.4s ease;
+      scroll-snap-align: center;
     }
 
     .word-pair.visible {
@@ -71,7 +59,6 @@
       color: #666;
     }
 
-    /* Letter styling */
     .letter {
       padding: 0 0.1rem;
     }
@@ -98,11 +85,7 @@
       background: white;
       border: 1px solid #ccc;
       width: 100%;
-      min-height: 2.5rem;
-      outline: none;
       margin-bottom: 1rem;
-      white-space: nowrap;
-      overflow-x: auto;
     }
 
     .strike {
@@ -134,7 +117,6 @@
       background-color: #1976d2;
     }
 
-    /* Slam animation keyframes */
     @keyframes slam {
       0% {
         opacity: 0;
@@ -153,29 +135,66 @@
       }
     }
 
-    /* Apply slam animation to newly typed characters */
     .slam {
-      animation: slam 0.1s ease forwards;
-      display: inline-block; /* Needed for transform animations */
+      animation: slam 0.3s ease forwards;
+      display: inline-block;
+    }
+
+    #typed-output {
+      font-size: 1.3rem;
+      margin-bottom: 1rem;
+      white-space: nowrap;
+      overflow-x: auto;
+    }
+
+    #progress-bar {
+      height: 6px;
+      background: #ddd;
+    }
+
+    #progress-fill {
+      height: 100%;
+      width: 0;
+      background: #4caf50;
+    }
+
+    @media (max-width: 600px) {
+      body {
+        padding: 1rem;
+        font-size: 1rem;
+      }
+
+      .word-block {
+        font-size: 1.5rem;
+      }
+
+      .input-field {
+        font-size: 1.2rem;
+        padding: 0.5rem;
+      }
+
+      button {
+        font-size: 1rem;
+        padding: 0.5rem 1rem;
+      }
     }
   </style>
 </head>
 <body>
-  <h1>Korean Reading Practice</h1>
-  <h2>Does not work on mobile sorry:(</h2>
-  <h2>made by YH:)</h2>
+  <h1>Foreign Reading Practice</h1>
 
   <div class="stream-wrapper" id="stream-wrapper"></div>
 
   <div class="score-display" id="score-display"></div>
 
-  <div class="input-field" id="input-field" contenteditable="true" spellcheck="false"></div>
+  <div id="typed-output"></div>
+  <input id="input-field" class="input-field" type="text" autocomplete="off" autocorrect="off" autocapitalize="off" />
   <div class="status" id="status-message"></div>
-  <div id="progress-bar" style="height: 6px; background: #ddd;">
-    <div id="progress-fill" style="height: 100%; width: 0; background: #4caf50;"></div>
+  <div id="progress-bar">
+    <div id="progress-fill"></div>
   </div>
   <div style="height: 6px;"></div>
-  <button id="restart-button"> Restart</button>
+  <button id="restart-button">Restart</button>
 
   <script>
     const foreignWords = [
@@ -205,19 +224,17 @@
     const statusMessage = document.getElementById("status-message");
     const progressBar = document.getElementById("progress-fill");
     const restartButton = document.getElementById("restart-button");
+    const typedOutput = document.getElementById("typed-output");
 
     function renderAllWords() {
       streamWrapper.innerHTML = "";
       wordSpans.length = 0;
-
       foreignWords.forEach(createWordBlock);
-
-      // Reset scroll position to left
       streamWrapper.scrollLeft = 0;
     }
 
     function centerCurrentWord() {
-      const container = document.getElementById("stream-wrapper");
+      const container = streamWrapper;
       if (!wordSpans[currentWordIndex]) return;
 
       const wordPairDiv = container.children[currentWordIndex];
@@ -225,17 +242,12 @@
 
       const containerRect = container.getBoundingClientRect();
       const wordRect = wordPairDiv.getBoundingClientRect();
-
-      // Calculate the scroll offset needed to center the word inside container
       const offset = wordRect.left - containerRect.left - (containerRect.width / 2) + (wordRect.width / 2);
-
-      // Scroll the container smoothly
       container.scrollBy({ left: offset, behavior: "smooth" });
     }
 
     function createWordBlock(word) {
       const spanGroup = [];
-
       const wordPair = document.createElement("div");
       wordPair.classList.add("word-pair");
 
@@ -259,10 +271,7 @@
       wordPair.appendChild(translation);
 
       streamWrapper.appendChild(wordPair);
-
-      setTimeout(() => {
-        wordPair.classList.add("visible");
-      }, 20);
+      setTimeout(() => wordPair.classList.add("visible"), 20);
 
       wordSpans.push({ foreign: spanGroup, translation });
     }
@@ -277,69 +286,41 @@
     }
 
     function renderInput() {
-      inputField.innerHTML = "";
-
+      typedOutput.innerHTML = "";
       inputHistory.forEach(entry => {
         const span = document.createElement("span");
         span.textContent = entry.char;
         span.classList.add(entry.status === "correct" ? "correct" : "strike");
-
-        // Add slam animation class to newly typed characters
-        // Only if this entry was just added (no 'animated' flag yet)
         if (!entry.animated) {
           span.classList.add("slam");
           entry.animated = true;
-
-          // Remove the animation class after animation ends to allow re-trigger later if needed
-          span.addEventListener("animationend", () => {
-            span.classList.remove("slam");
-          }, { once: true });
+          span.addEventListener("animationend", () => span.classList.remove("slam"), { once: true });
         }
-
-        inputField.appendChild(span);
+        typedOutput.appendChild(span);
       });
 
       if (currentInputBuffer) {
         const span = document.createElement("span");
         span.textContent = currentInputBuffer;
-
-        // Animate buffer too as it appears
         span.classList.add("slam");
-        span.addEventListener("animationend", () => {
-          span.classList.remove("slam");
-        }, { once: true });
-
-        inputField.appendChild(span);
+        span.addEventListener("animationend", () => span.classList.remove("slam"), { once: true });
+        typedOutput.appendChild(span);
       }
-
-      placeCaretAtEnd(inputField);
-    }
-
-    function placeCaretAtEnd(el) {
-      const range = document.createRange();
-      const sel = window.getSelection();
-      range.selectNodeContents(el);
-      range.collapse(false);
-      sel.removeAllRanges();
-      sel.addRange(range);
     }
 
     function loadWord(index) {
       if (index >= foreignWords.length) return;
-
       currentWordIndex = index;
       currentLetterIndex = 0;
       inputHistory = [];
       currentInputBuffer = "";
       renderInput();
       highlightCurrentLetter();
-
+      inputField.value = "";
       inputField.focus();
       statusMessage.textContent = `Word ${index + 1} of ${foreignWords.length}`;
       progressBar.style.width = `${(currentWordIndex / foreignWords.length) * 100}%`;
-
       updateScoreDisplay();
-
       centerCurrentWord();
     }
 
@@ -350,74 +331,44 @@
         loadWord(currentWordIndex);
       } else {
         statusMessage.textContent = "🎉 Practice complete!";
-        inputField.setAttribute("contenteditable", "false");
+        inputField.disabled = true;
       }
-
-      // center on current word after advancing
       centerCurrentWord();
     }
 
     function updateScoreDisplay() {
-      const scoreDisplay = document.getElementById("score-display");
       const total = totalCorrect + totalMistakes;
       const accuracy = total > 0 ? Math.round((totalCorrect / total) * 100) : 100;
-      scoreDisplay.textContent = `Correct: ${totalCorrect} | Mistakes: ${totalMistakes} | Accuracy: ${accuracy}%`;
+      document.getElementById("score-display").textContent =
+        `Correct: ${totalCorrect} | Mistakes: ${totalMistakes} | Accuracy: ${accuracy}%`;
     }
 
-    inputField.addEventListener("keydown", (e) => {
+    inputField.addEventListener("input", (e) => {
       const wordData = foreignWords[currentWordIndex];
       const currentPhoneme = wordData.phonetic[currentLetterIndex];
+      const char = inputField.value.toLowerCase();
 
-      if (e.key === "Enter") {
-        e.preventDefault();
-        return;
-      }
+      if (!char) return;
 
-      if (e.key === "Backspace") {
-        if (currentInputBuffer.length > 0) {
-          currentInputBuffer = currentInputBuffer.slice(0, -1);
-        } else if (inputHistory.length > 0) {
-          const last = inputHistory.pop();
-          if (last.status === "correct") {
-            currentLetterIndex--;
-            highlightCurrentLetter();
-            if (last.scored) {
-              totalCorrect--;
-            }
-            updateScoreDisplay();
-          }
+      currentInputBuffer += char;
+      inputField.value = "";
+
+      if (currentPhoneme === currentInputBuffer) {
+        inputHistory.push({ char: currentInputBuffer, status: "correct", scored: true });
+        totalCorrect++;
+        currentLetterIndex++;
+        currentInputBuffer = "";
+        highlightCurrentLetter();
+        if (currentLetterIndex === wordData.phonetic.length) {
+          setTimeout(() => advanceToNextWord(), 0);
         }
-        renderInput();
-
-        e.preventDefault();
-        return;
+      } else if (!currentPhoneme.startsWith(currentInputBuffer)) {
+        inputHistory.push({ char: currentInputBuffer, status: "wrong" });
+        totalMistakes++;
+        currentInputBuffer = "";
       }
 
-      if (e.key.length === 1 && /^[a-zA-Z]$/.test(e.key)) {
-        currentInputBuffer += e.key.toLowerCase();
-
-        if (currentPhoneme === currentInputBuffer) {
-          // ✅ exact match
-          inputHistory.push({ char: currentInputBuffer, status: "correct", scored: true });
-          totalCorrect++;
-          currentLetterIndex++;
-          currentInputBuffer = "";
-          highlightCurrentLetter();
-
-          if (currentLetterIndex === wordData.phonetic.length) {
-            setTimeout(() => advanceToNextWord(), 0);
-          }
-        } else if (!currentPhoneme.startsWith(currentInputBuffer)) {
-          // ❌ not even a prefix
-          inputHistory.push({ char: currentInputBuffer, status: "wrong" });
-          totalMistakes++;
-          currentInputBuffer = "";
-        }
-
-        renderInput();
-        e.preventDefault();
-      }
-
+      renderInput();
       updateScoreDisplay();
     });
 
@@ -428,11 +379,9 @@
       currentInputBuffer = "";
       currentWordIndex = 0;
       currentLetterIndex = 0;
-
       renderAllWords();
       loadWord(0);
-      inputField.setAttribute("contenteditable", "true");
-      updateScoreDisplay();
+      inputField.disabled = false;
     });
 
     // Init
