--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Foreign Language Typing Trainer</title>
+  <title>Foreign Language Typing Trainer with Virtual Keyboard</title>
   <style>
     body {
       font-family: "Segoe UI", sans-serif;
@@ -13,12 +13,10 @@
       max-width: 900px;
       margin: auto;
     }
-
     h1 {
       font-size: 2rem;
       margin-bottom: 1rem;
     }
-
     .stream-wrapper {
       display: flex;
       gap: 2rem;
@@ -26,11 +24,9 @@
       padding-bottom: 1rem;
       margin-bottom: 1rem;
       border-bottom: 2px solid #ddd;
-      white-space: nowrap;
       scroll-behavior: smooth;
-      scroll-snap-type: x mandatory;
+      white-space: nowrap;
     }
-
     .word-pair {
       display: flex;
       flex-direction: column;
@@ -39,70 +35,61 @@
       opacity: 0;
       transform: translateX(30px);
       transition: all 0.4s ease;
-      scroll-snap-align: center;
     }
-
     .word-pair.visible {
       opacity: 1;
       transform: translateX(0);
     }
-
     .word-block {
       display: flex;
       gap: 0.25rem;
       font-size: 1.8rem;
       line-height: 2.5rem;
     }
-
     .word-block.translation {
       font-size: 1rem;
       color: #666;
     }
-
     .letter {
       padding: 0 0.1rem;
     }
-
     .current {
       background-color: #ffd54f;
       border-radius: 4px;
     }
-
     .current-translation {
       font-weight: bold;
       color: #222;
     }
-
     .score-display {
       font-size: 1rem;
       margin-bottom: 0.5rem;
       color: #333;
     }
-
-    .input-field {
+    #input-display {
       font-size: 1.5rem;
       padding: 0.75rem;
       background: white;
       border: 1px solid #ccc;
       width: 100%;
+      min-height: 2.5rem;
       margin-bottom: 1rem;
+      white-space: nowrap;
+      overflow-x: auto;
+      user-select: none;
     }
-
     .strike {
       text-decoration: line-through;
       color: #e53935;
     }
-
     .correct {
       color: #43a047;
     }
-
     .status {
       font-style: italic;
       color: #555;
       margin-bottom: 1rem;
     }
-
     button {
       background-color: #2196f3;
       color: white;
@@ -111,12 +98,11 @@
       font-size: 1rem;
       border-radius: 4px;
       cursor: pointer;
+      user-select: none;
     }
-
     button:hover {
       background-color: #1976d2;
     }
-
     @keyframes slam {
       0% {
         opacity: 0;
@@ -134,49 +120,27 @@
         transform: translateY(0) rotate(0deg) scale(1);
       }
     }
-
     .slam {
       animation: slam 0.3s ease forwards;
       display: inline-block;
     }
-
-    #typed-output {
-      font-size: 1.3rem;
+    /* Virtual keyboard styling */
+    #virtual-keyboard {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.4rem;
+      justify-content: center;
       margin-bottom: 1rem;
-      white-space: nowrap;
-      overflow-x: auto;
+      user-select: none;
     }
-
-    #progress-bar {
-      height: 6px;
-      background: #ddd;
+    #virtual-keyboard button {
+      flex: 0 0 2.8rem;
+      height: 2.8rem;
+      font-size: 1.1rem;
+      padding: 0;
     }
-
-    #progress-fill {
-      height: 100%;
-      width: 0;
-      background: #4caf50;
-    }
-
-    @media (max-width: 600px) {
-      body {
-        padding: 1rem;
-        font-size: 1rem;
-      }
-
-      .word-block {
-        font-size: 1.5rem;
-      }
-
-      .input-field {
-        font-size: 1.2rem;
-        padding: 0.5rem;
-      }
-
-      button {
-        font-size: 1rem;
-        padding: 0.5rem 1rem;
-      }
+    #virtual-keyboard button.wide {
+      flex: 0 0 5.8rem;
     }
   </style>
 </head>
@@ -187,11 +151,15 @@
 
   <div class="score-display" id="score-display"></div>
 
-  <div id="typed-output"></div>
-  <input id="input-field" class="input-field" type="text" autocomplete="off" autocorrect="off" autocapitalize="off" />
+  <!-- Replacing contenteditable input with readonly div for display -->
+  <div id="input-display" aria-live="polite" aria-atomic="true" role="textbox" tabindex="0"></div>
+
+  <!-- Virtual keyboard container -->
+  <div id="virtual-keyboard" aria-label="Virtual keyboard"></div>
+
   <div class="status" id="status-message"></div>
-  <div id="progress-bar">
-    <div id="progress-fill"></div>
+  <div id="progress-bar" style="height: 6px; background: #ddd;">
+    <div id="progress-fill" style="height: 100%; width: 0; background: #4caf50;"></div>
   </div>
   <div style="height: 6px;"></div>
   <button id="restart-button">Restart</button>
@@ -220,16 +188,39 @@
     const wordSpans = [];
 
     const streamWrapper = document.getElementById("stream-wrapper");
-    const inputField = document.getElementById("input-field");
+    const inputDisplay = document.getElementById("input-display");
     const statusMessage = document.getElementById("status-message");
     const progressBar = document.getElementById("progress-fill");
     const restartButton = document.getElementById("restart-button");
-    const typedOutput = document.getElementById("typed-output");
+    const virtualKeyboard = document.getElementById("virtual-keyboard");
+
+    // Create the virtual keyboard keys a-z + Backspace
+    function createVirtualKeyboard() {
+      const keys = [];
+      for (let i = 0; i < 26; i++) {
+        keys.push(String.fromCharCode(97 + i)); // a-z
+      }
+      keys.push("Backspace");
+
+      virtualKeyboard.innerHTML = "";
+
+      keys.forEach(key => {
+        const btn = document.createElement("button");
+        btn.textContent = key === "Backspace" ? "⌫" : key;
+        btn.setAttribute("data-key", key);
+        btn.type = "button";
+        if (key === "Backspace") btn.classList.add("wide");
+        virtualKeyboard.appendChild(btn);
+      });
+    }
 
     function renderAllWords() {
       streamWrapper.innerHTML = "";
       wordSpans.length = 0;
+
       foreignWords.forEach(createWordBlock);
+
+      // Reset scroll position to left
       streamWrapper.scrollLeft = 0;
     }
 
@@ -242,12 +233,15 @@
 
       const containerRect = container.getBoundingClientRect();
       const wordRect = wordPairDiv.getBoundingClientRect();
+
       const offset = wordRect.left - containerRect.left - (containerRect.width / 2) + (wordRect.width / 2);
+
       container.scrollBy({ left: offset, behavior: "smooth" });
     }
 
     function createWordBlock(word) {
       const spanGroup = [];
+
       const wordPair = document.createElement("div");
       wordPair.classList.add("word-pair");
 
@@ -271,7 +265,10 @@
       wordPair.appendChild(translation);
 
       streamWrapper.appendChild(wordPair);
-      setTimeout(() => wordPair.classList.add("visible"), 20);
+
+      setTimeout(() => {
+        wordPair.classList.add("visible");
+      }, 20);
 
       wordSpans.push({ foreign: spanGroup, translation });
     }
@@ -286,41 +283,51 @@
     }
 
     function renderInput() {
-      typedOutput.innerHTML = "";
+      inputDisplay.innerHTML = "";
+
       inputHistory.forEach(entry => {
         const span = document.createElement("span");
         span.textContent = entry.char;
         span.classList.add(entry.status === "correct" ? "correct" : "strike");
+
         if (!entry.animated) {
           span.classList.add("slam");
           entry.animated = true;
-          span.addEventListener("animationend", () => span.classList.remove("slam"), { once: true });
+          span.addEventListener("animationend", () => {
+            span.classList.remove("slam");
+          }, { once: true });
         }
-        typedOutput.appendChild(span);
+
+        inputDisplay.appendChild(span);
       });
 
       if (currentInputBuffer) {
         const span = document.createElement("span");
         span.textContent = currentInputBuffer;
         span.classList.add("slam");
-        span.addEventListener("animationend", () => span.classList.remove("slam"), { once: true });
-        typedOutput.appendChild(span);
+        span.addEventListener("animationend", () => {
+          span.classList.remove("slam");
+        }, { once: true });
+
+        inputDisplay.appendChild(span);
       }
     }
 
     function loadWord(index) {
       if (index >= foreignWords.length) return;
+
       currentWordIndex = index;
       currentLetterIndex = 0;
       inputHistory = [];
       currentInputBuffer = "";
       renderInput();
       highlightCurrentLetter();
-      inputField.value = "";
-      inputField.focus();
+
       statusMessage.textContent = `Word ${index + 1} of ${foreignWords.length}`;
       progressBar.style.width = `${(currentWordIndex / foreignWords.length) * 100}%`;
+
       updateScoreDisplay();
+
       centerCurrentWord();
     }
 
@@ -331,45 +338,91 @@
         loadWord(currentWordIndex);
       } else {
         statusMessage.textContent = "🎉 Practice complete!";
-        inputField.disabled = true;
+        // Disable keyboard buttons at end
+        virtualKeyboard.querySelectorAll("button").forEach(btn => btn.disabled = true);
       }
+
       centerCurrentWord();
     }
 
     function updateScoreDisplay() {
+      const scoreDisplay = document.getElementById("score-display");
       const total = totalCorrect + totalMistakes;
       const accuracy = total > 0 ? Math.round((totalCorrect / total) * 100) : 100;
-      document.getElementById("score-display").textContent =
-        `Correct: ${totalCorrect} | Mistakes: ${totalMistakes} | Accuracy: ${accuracy}%`;
+      scoreDisplay.textContent = `Correct: ${totalCorrect} | Mistakes: ${totalMistakes} | Accuracy: ${accuracy}%`;
     }
 
-    inputField.addEventListener("input", (e) => {
+    // Centralized function to handle input char (from keyboard or virtual keys)
+    function handleInputChar(char) {
       const wordData = foreignWords[currentWordIndex];
       const currentPhoneme = wordData.phonetic[currentLetterIndex];
-      const char = inputField.value.toLowerCase();
 
-      if (!char) return;
-
-      currentInputBuffer += char;
-      inputField.value = "";
-
-      if (currentPhoneme === currentInputBuffer) {
-        inputHistory.push({ char: currentInputBuffer, status: "correct", scored: true });
-        totalCorrect++;
-        currentLetterIndex++;
-        currentInputBuffer = "";
-        highlightCurrentLetter();
-        if (currentLetterIndex === wordData.phonetic.length) {
-          setTimeout(() => advanceToNextWord(), 0);
+      if (char === "Backspace") {
+        if (currentInputBuffer.length > 0) {
+          currentInputBuffer = currentInputBuffer.slice(0, -1);
+        } else if (inputHistory.length > 0) {
+          const last = inputHistory.pop();
+          if (last.status === "correct") {
+            currentLetterIndex--;
+            highlightCurrentLetter();
+            if (last.scored) {
+              totalCorrect--;
+            }
+            updateScoreDisplay();
+          }
         }
-      } else if (!currentPhoneme.startsWith(currentInputBuffer)) {
-        inputHistory.push({ char: currentInputBuffer, status: "wrong" });
-        totalMistakes++;
-        currentInputBuffer = "";
+        renderInput();
+        return;
       }
 
-      renderInput();
+      if (/^[a-z]$/.test(char)) {
+        currentInputBuffer += char.toLowerCase();
+
+        if (currentPhoneme === currentInputBuffer) {
+          inputHistory.push({ char: currentInputBuffer, status: "correct", scored: true });
+          totalCorrect++;
+          currentLetterIndex++;
+          currentInputBuffer = "";
+          highlightCurrentLetter();
+
+          if (currentLetterIndex === wordData.phonetic.length) {
+            setTimeout(() => advanceToNextWord(), 0);
+          }
+        } else if (!currentPhoneme.startsWith(currentInputBuffer)) {
+          inputHistory.push({ char: currentInputBuffer, status: "wrong" });
+          totalMistakes++;
+          currentInputBuffer = "";
+        }
+        renderInput();
+      }
+
       updateScoreDisplay();
+    }
+
+    // Physical keyboard input handler
+    window.addEventListener("keydown", (e) => {
+      if (e.key === "Enter") {
+        e.preventDefault();
+        return;
+      }
+      if (e.key === "Backspace") {
+        e.preventDefault();
+        handleInputChar("Backspace");
+        return;
+      }
+      if (e.key.length === 1 && /^[a-zA-Z]$/.test(e.key)) {
+        e.preventDefault();
+        handleInputChar(e.key.toLowerCase());
+      }
+    });
+
+    // Virtual keyboard click handler
+    virtualKeyboard.addEventListener("click", (e) => {
+      if (e.target.tagName !== "BUTTON") return;
+      if (e.target.disabled) return;
+
+      const key = e.target.getAttribute("data-key");
+      handleInputChar(key);
     });
 
     restartButton.addEventListener("click", () => {
@@ -379,13 +432,17 @@
       currentInputBuffer = "";
       currentWordIndex = 0;
       currentLetterIndex = 0;
+
       renderAllWords();
       loadWord(0);
-      inputField.disabled = false;
+      // Enable buttons again
+      virtualKeyboard.querySelectorAll("button").forEach(btn => btn.disabled = false);
+      updateScoreDisplay();
     });
 
     // Init
     renderAllWords();
+    createVirtualKeyboard();
     loadWord(0);
   </script>
 </body>
