--- a/index.html
+++ b/index.html
@@ -124,77 +124,45 @@
       animation: slam 0.3s ease forwards;
       display: inline-block;
     }
-    
-@media (max-width: 360px) {
+    /* Virtual keyboard styling */
+      #virtual-keyboard {
+    user-select: none;
+    margin-bottom: 1rem;
+    display: inline-block;
+    text-align: center;
+  }
+
+  #virtual-keyboard > div {
+    margin-bottom: 0.4rem;
+  }
+
   #virtual-keyboard button {
-    font-size: 1rem;
-    flex: 0 0 2.6rem;
-    height: 2.6rem;
-    min-width: 2.6rem;
+    background-color: #ddd; /* Light gray */
+    border: 1px solid #bbb;
+    border-radius: 5px;
+    color: #222;
+    font-weight: 600;
+    font-size: 1.1rem;
+    flex: 0 0 2.8rem;
+    height: 2.8rem;
+    cursor: pointer;
+    user-select: none;
+    transition: background-color 0.2s ease;
+    box-shadow: inset 0 -2px 0 #aaa;
+  }
+
+  #virtual-keyboard button:hover {
+    background-color: #ccc;
+  }
+
+  #virtual-keyboard button:active {
+    background-color: #bbb;
+    box-shadow: inset 0 2px 4px #888;
   }
 
   #virtual-keyboard button.wide {
-    flex: 0 0 4.8rem;
-    min-width: 4.8rem;
+    flex: 0 0 5.8rem;
   }
-}
-
-
-#virtual-keyboard {
-  user-select: none;
-  margin: 1rem auto 1.5rem auto;
-  max-width: 100vw;
-  padding: 0 0.3rem;
-  text-align: center;
-  box-sizing: border-box;
-}
-
-#virtual-keyboard > div {
-  margin-bottom: 0.35rem;
-  display: flex;
-  justify-content: center;
-  gap: 0.3rem;
-  flex-wrap: nowrap; /* keep keys in a line */
-  overflow-x: auto;   /* allow horizontal scroll if needed */
-  -webkit-overflow-scrolling: touch;
-}
-
-#virtual-keyboard button {
-  background-color: #eee;
-  border: 1.2px solid #ccc;
-  border-radius: 7px;
-  color: #444;
-  font-weight: 600;
-  font-size: 1.1rem;
-  flex: 0 0 3rem;
-  height: 3rem;
-  cursor: pointer;
-  user-select: none;
-  transition: background-color 0.15s ease, color 0.15s ease;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  white-space: nowrap;
-  min-width: 3rem;
-  box-sizing: border-box;
-}
-
-#virtual-keyboard button:hover {
-  background-color: #d6d6d6;
-  color: #222;
-}
-
-#virtual-keyboard button:active {
-  background-color: #bbb;
-  color: #111;
-}
-
-#virtual-keyboard button.wide {
-  flex: 0 0 5.5rem;
-  min-width: 5.5rem;
-}
-
-
 
   </style>
 </head>
