--- a/index.html
+++ b/index.html
@@ -124,45 +124,6 @@
       animation: slam 0.3s ease forwards;
       display: inline-block;
     }
-    /* Virtual keyboard styling */
-      #virtual-keyboard {
-    user-select: none;
-    margin-bottom: 1rem;
-    display: inline-block;
-    text-align: center;
-  }
-
-  #virtual-keyboard > div {
-    margin-bottom: 0.4rem;
-  }
-
-  #virtual-keyboard button {
-    background-color: #ddd; /* Light gray */
-    border: 1px solid #bbb;
-    border-radius: 5px;
-    color: #222;
-    font-weight: 600;
-    font-size: 1.1rem;
-    flex: 0 0 2.8rem;
-    height: 2.8rem;
-    cursor: pointer;
-    user-select: none;
-    transition: background-color 0.2s ease;
-    box-shadow: inset 0 -2px 0 #aaa;
-  }
-
-  #virtual-keyboard button:hover {
-    background-color: #ccc;
-  }
-
-  #virtual-keyboard button:active {
-    background-color: #bbb;
-    box-shadow: inset 0 2px 4px #888;
-  }
-
-  #virtual-keyboard button.wide {
-    flex: 0 0 5.8rem;
-  }
 
   </style>
 </head>
@@ -185,6 +146,59 @@
   </div>
   <div style="height: 6px;"></div>
   <button id="restart-button">Restart</button>
+
+<div id="virtual-keyboard"></div>
+<style>
+  #virtual-keyboard {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: #eee;
+    padding: 8px 6px;
+    display: flex;
+    flex-direction: column;
+    user-select: none;
+    box-shadow: 0 -2px 5px rgba(0,0,0,0.1);
+    z-index: 1000;
+  }
+
+  #virtual-keyboard .row {
+    display: flex;
+    justify-content: center;
+    gap: 6px;
+    margin-bottom: 6px;
+  }
+
+  #virtual-keyboard button {
+    background-color: #ddd;
+    border: none;
+    border-radius: 4px;
+    flex: 1 0 0;
+    height: 44px;
+    font-size: 1.1rem;
+    font-weight: 600;
+    color: #222;
+    cursor: pointer;
+    box-shadow: inset 0 -2px 0 #bbb;
+    transition: background-color 0.2s ease;
+    user-select: none;
+  }
+
+  #virtual-keyboard button:hover {
+    background-color: #ccc;
+  }
+
+  #virtual-keyboard button:active {
+    background-color: #bbb;
+    box-shadow: inset 0 2px 4px #999;
+  }
+
+  /* Backspace key is wider */
+  #virtual-keyboard button.backspace {
+    flex: 1.6 0 0;
+  }
+</style>
 
   <script>
     const foreignWords = [
