--- a/index.html
+++ b/index.html
@@ -147,57 +147,66 @@
   <div style="height: 6px;"></div>
   <button id="restart-button">Restart</button>
 
-<div id="virtual-keyboard"></div>
+<div id="virtual-keyboard" aria-label="Virtual Keyboard"></div>
+
 <style>
   #virtual-keyboard {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: #eee;
-    padding: 8px 6px;
-    display: flex;
-    flex-direction: column;
-    user-select: none;
-    box-shadow: 0 -2px 5px rgba(0,0,0,0.1);
-    z-index: 1000;
-  }
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 0.6rem 0.4rem;
+  background: #f0f0f3;
+  border-top: 1px solid #ccc;
+  display: flex;
+  flex-direction: column;
+  gap: 0.4rem;
+  z-index: 999;
+  box-shadow: 0 -2px 10px rgba(0,0,0,0.06);
+  font-family: "Segoe UI", sans-serif;
+}
 
-  #virtual-keyboard .row {
-    display: flex;
-    justify-content: center;
-    gap: 6px;
-    margin-bottom: 6px;
-  }
+#virtual-keyboard .key-row {
+  display: flex;
+  justify-content: center;
+  gap: 0.3rem;
+}
 
+#virtual-keyboard button {
+  flex: 1;
+  max-width: 36px;
+  height: 48px;
+  background: #e0e0e0;
+  border: none;
+  border-radius: 6px;
+  font-size: 1.1rem;
+  font-weight: 500;
+  color: #222;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+  transition: background 0.2s ease;
+  cursor: pointer;
+  user-select: none;
+}
+
+#virtual-keyboard button:active {
+  background: #d0d0d0;
+}
+
+#virtual-keyboard button.backspace {
+  max-width: 80px;
+}
+
+@media (min-width: 600px) {
   #virtual-keyboard button {
-    background-color: #ddd;
-    border: none;
-    border-radius: 4px;
-    flex: 1 0 0;
-    height: 44px;
-    font-size: 1.1rem;
-    font-weight: 600;
-    color: #222;
-    cursor: pointer;
-    box-shadow: inset 0 -2px 0 #bbb;
-    transition: background-color 0.2s ease;
-    user-select: none;
+    max-width: 44px;
+    height: 52px;
   }
 
-  #virtual-keyboard button:hover {
-    background-color: #ccc;
-  }
-
-  #virtual-keyboard button:active {
-    background-color: #bbb;
-    box-shadow: inset 0 2px 4px #999;
-  }
-
-  /* Backspace key is wider */
   #virtual-keyboard button.backspace {
-    flex: 1.6 0 0;
+    max-width: 100px;
   }
+}
+
 </style>
 
   <script>
