--- a/index.html
+++ b/index.html
@@ -1,28 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <title>Virtual Keyboard</title>
   <style>
-    body {
+    html, body {
       margin: 0;
-      font-family: 'Helvetica Neue', sans-serif;
+      padding: 0;
       background: #f2f2f2;
+      font-family: 'Helvetica Neue', sans-serif;
+      height: 100vh;
+      overflow: hidden;
       display: flex;
       flex-direction: column;
+      justify-content: center;
       align-items: center;
-      justify-content: flex-end;
-      height: 100vh;
+    }
+
+    #keyboard-container {
+      width: 100%;
+      max-width: 500px;
+      padding: 16px;
+      box-sizing: border-box;
+    }
+
+    #output {
+      font-size: 24px;
+      letter-spacing: 2px;
+      text-align: center;
+      margin-bottom: 20px;
+      min-height: 30px;
+      color: #333;
+      word-break: break-word;
     }
 
     #keyboard {
-      display: grid;
+      display: flex;
+      flex-direction: column;
       gap: 8px;
-      padding: 16px;
-      width: 100%;
-      max-width: 500px;
-      box-sizing: border-box;
     }
 
     .row {
@@ -35,70 +51,69 @@
       background: #d3d6da;
       border: none;
       border-radius: 4px;
-      padding: 14px 10px;
-      font-size: 18px;
+      padding: 12px 0;
+      width: 32px;
+      font-size: 16px;
       text-transform: uppercase;
       font-weight: bold;
-      flex: 1;
-      max-width: 10%;
+      text-align: center;
+      color: #111;
+      user-select: none;
       transition: background 0.2s;
-    }
-
-    .key.wide {
-      flex: 2;
     }
 
     .key:active {
       background: #a4a5a8;
     }
 
-    #output {
-      margin-bottom: auto;
-      margin-top: 40px;
-      font-size: 24px;
-      letter-spacing: 2px;
-      min-height: 30px;
+    @media (max-width: 400px) {
+      .key {
+        width: 28px;
+        font-size: 14px;
+        padding: 10px 0;
+      }
     }
   </style>
 </head>
 <body>
 
-  <div id="output"></div>
+  <div id="keyboard-container">
+    <div id="output"></div>
 
-  <div id="keyboard">
-    <div class="row">
-      <button class="key">q</button>
-      <button class="key">w</button>
-      <button class="key">e</button>
-      <button class="key">r</button>
-      <button class="key">t</button>
-      <button class="key">y</button>
-      <button class="key">u</button>
-      <button class="key">i</button>
-      <button class="key">o</button>
-      <button class="key">p</button>
-    </div>
-    <div class="row">
-      <button class="key">a</button>
-      <button class="key">s</button>
-      <button class="key">d</button>
-      <button class="key">f</button>
-      <button class="key">g</button>
-      <button class="key">h</button>
-      <button class="key">j</button>
-      <button class="key">k</button>
-      <button class="key">l</button>
-    </div>
-    <div class="row">
-      <button class="key wide" data-key="enter">Enter</button>
-      <button class="key">z</button>
-      <button class="key">x</button>
-      <button class="key">c</button>
-      <button class="key">v</button>
-      <button class="key">b</button>
-      <button class="key">n</button>
-      <button class="key">m</button>
-      <button class="key wide" data-key="backspace">←</button>
+    <div id="keyboard">
+      <div class="row">
+        <button class="key">q</button>
+        <button class="key">w</button>
+        <button class="key">e</button>
+        <button class="key">r</button>
+        <button class="key">t</button>
+        <button class="key">y</button>
+        <button class="key">u</button>
+        <button class="key">i</button>
+        <button class="key">o</button>
+        <button class="key">p</button>
+      </div>
+      <div class="row">
+        <button class="key">a</button>
+        <button class="key">s</button>
+        <button class="key">d</button>
+        <button class="key">f</button>
+        <button class="key">g</button>
+        <button class="key">h</button>
+        <button class="key">j</button>
+        <button class="key">k</button>
+        <button class="key">l</button>
+      </div>
+      <div class="row">
+        <button class="key">z</button>
+        <button class="key">x</button>
+        <button class="key">c</button>
+        <button class="key">v</button>
+        <button class="key">b</button>
+        <button class="key">n</button>
+        <button class="key">m</button>
+        <button class="key">⌫</button>
+      </div>
     </div>
   </div>
 
@@ -107,12 +122,9 @@
 
     document.querySelectorAll('.key').forEach(key => {
       key.addEventListener('click', () => {
-        const val = key.dataset.key || key.textContent;
-        if (val === 'backspace') {
+        const val = key.textContent.trim();
+        if (val === '⌫') {
           output.textContent = output.textContent.slice(0, -1);
-        } else if (val === 'enter') {
-          alert('You entered: ' + output.textContent);
-          output.textContent = '';
         } else {
           output.textContent += val;
         }
